1.Resolved in Create project screen:User with lengthy name is overlapping with the role. 2.In edit user under primary role dropdown is disabled

--- a/app/src/pages/landing/styles/CreateProject.scss
+++ b/app/src/pages/landing/styles/CreateProject.scss
@@ -286,16 +286,15 @@
 
     }
     .user-role{
-        color: darkgrey;
-        font-size: 12px;
-        position: relative;
-        left: 2.2rem;
         bottom: 1rem;
-        font-family: 'Open Sans';
-        font-style: normal;
-        font-weight: 400;
-        left: 0.2rem;
-        width: 7rem;
+    color: #a9a9a9;
+    font-family: Open Sans;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    left: 3.2rem;
+    position: relative;
+    width: 6rem;
 
    
     }
